--- a/source/sass/_buttons.scss
+++ b/source/sass/_buttons.scss
@@ -37,6 +37,16 @@
             display: block;
             margin: 0 auto;
         }
+
+        &.btn-lbmenu {
+            display: block;
+
+            > span,
+            > span:before,
+            > span:after {
+                background-color: $darkgray;
+            }
+        }
     }
 
     > span {
